statefun/deployment/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: benchmark-api
  template:
    metadata:
      labels:
        app: benchmark-api
    spec:
      containers:
        - name: main
          image: eu.gcr.io/martijns/benchmark-statefun-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
          ports:
            - containerPort: 8080
