statefun/deployment/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benchmark-api-ingress
spec:
  defaultBackend:
    service:
      name: benchmark-api-service
      port:
        number: 80
